   11 feb, 2019   'Search result page fix'
                              Screen-readers announced wrongly the widget-searchform.
                              Addcapital letters to accesskeys. 
      
   12 Feb, 2019   'Add user agent detect'
                              Clarify os and browser detection.
                              
   16 Feb,  2019  'Link function enhancement'
                              Announce opens in new window even if it is internal link.
                              Other documentations in class Link_Function
                              
   16 Feb, 2019   'User can select the link's target in Reading option'
                           This is an experimental function. You can choose to override the editor's setup of lin's target.
                           Based on user's experience everybody has its own preference, how to open the links. 
                           With this function, you can choose from 3 alternatives:
                              1. leave as it is,
                              2. the content's link will be open in new windows,
                              3. all links will be open in the same window. 
   
   19 Feb, 2019   'no-javascript message moved to template'
                           tempalte is located: tempalates/header/nojavascript.php
                           Now it can be altered without editing header.php
   
   19 Feb, 2019   'set focus of back-to-top link'
                           Reading with screen-reader, the focus did not moved back to the top of the page. 
   
   19 Feb, 2019   'fix HTML errors'
                           I checked the theme with W3C validator. I have found errors, and I fixed ig. 
                              
   21 Feb 2019    'Enhanced archive widget'
                           The archive widget (archive by months) may have very long: more hundreds item in select menu.
                           This is reduced significantly with 2 select menus: year and months. 