@@ -34,9 +34,6 @@ How to ...
 ... change breadcrumb parameters
       - copy breadcrumb-template file to the child theme's template-parts/header directory and change the parameters in it.
       - or - if you are familiar with PHP programming: extend the breadcrumb class.
-
-... add access key details:
-      define MANDUCA_ACCESS_KES global with an url pointing to the details.
       
 ... add namespace in child theme in order to avoid nam confusions::
       add the namsepace as a key to Manduca_Classloader. e.g 'Web25\\childtheme' => get_stylesheet_directory() .'/inc/'
